@@ -1,6 +1,7 @@
 == 0.1.13 (In Git)
 
 === New features
+* Enable RSpec's diffing automatically if RSpec is loaded (Aslak Hellesøy)
 * The Rails features generator got some love and is now tested: http://github.com/aslakhellesoy/cucumber_rails (Aslak Hellesøy)
 * --language is aliased to -l instead of -a (-l became available when --line was refactored) (Aslak Hellesøy)
 * Scenario Outlines which through placeholders in the steps allow control of how scenario table values are used. (#57 Joseph Wilk)
